Prevent flickering in theme selection dialog
Ensure the scroll bar is always visible, because toggling it changes
the contents width. In some view port widths Chrome cannot decide
whether to display the scroll bar or not when content overflows if and
only if the scroll bar is visible. This causing a flicker effect.

--- a/app/assets/stylesheets/pageflow/editor/change_theme.scss
+++ b/app/assets/stylesheets/pageflow/editor/change_theme.scss
@@ -17,6 +17,7 @@
     bottom: 50px;
     left: 20px;
     overflow: auto;
+    overflow-y: scroll;
     background-color: #fff;
 
     >div {
